clusters/apps/factorio/factorio-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    io.kompose.service: factorio
  name: factorio
spec:
  ports:
    - name: "34197"
      port: 34197
      protocol: UDP
      targetPort: 34197
    - name: "27015"
      port: 27015
      targetPort: 27015
  selector:
    io.kompose.service: factorio
